--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,14 +2,14 @@
 name = "iced_aw"
 version = "0.12.2"
 authors = [
-    "Kaiden42 <gitlab@tinysn.com>",
-    "Andrew Wheeler <genusistimelord@gmail.com>",
+  "Kaiden42 <gitlab@tinysn.com>",
+  "Andrew Wheeler <genusistimelord@gmail.com>",
 ]
 edition = "2021"
 description = "Additional widgets for the Iced GUI library"
 license = "MIT"
 homepage = "https://iced.rs"
-repository = "https://github.com/iced-rs/iced_aw"
+repository = "https://github.com/vizkam/iced_aw"
 readme = "README.md"
 keywords = ["gui", "graphics", "interface", "widgets", "iced"]
 categories = ["gui"]
@@ -21,7 +21,7 @@ card = []
 date_picker = ["chrono"]
 color_picker = ["iced/canvas"]
 grid = ["itertools"]
-glow = []                                                   # TODO
+glow = []                                                  # TODO
 tab_bar = []
 tabs = ["tab_bar"]
 time_picker = ["chrono", "iced/canvas"]
@@ -38,38 +38,40 @@ drop_down = []
 sidebar = []
 
 default = [
-    "badge",
-    "card",
-    "number_input",
-    "date_picker",
-    "color_picker",
-    "grid",
-    "tab_bar",
-    "tabs",
-    "time_picker",
-    "slide_bar",
-    "wrap",
-    "selection_list",
-    "quad",
-    "context_menu",
-    "spinner",
-    "drop_down",
-    "menu",
-    "sidebar",
+  "badge",
+  "card",
+  "number_input",
+  "date_picker",
+  "color_picker",
+  "grid",
+  "tab_bar",
+  "tabs",
+  "time_picker",
+  "slide_bar",
+  "wrap",
+  "selection_list",
+  "quad",
+  "context_menu",
+  "spinner",
+  "drop_down",
+  "menu",
+  "sidebar",
 ]
 
 [dependencies]
 cfg-if = "1.0"
 chrono = { version = "0.4.39", optional = true, features = ["wasmbind"] }
-iced_fonts = {git = "https://github.com/vizkam/iced_fonts.git", rev="969e957632040e443c9fa6789a1c43bb71dcc11b", features = ["bootstrap"]}
+iced_fonts = { git = "https://github.com/vizkam/iced_fonts.git", rev = "969e957632040e443c9fa6789a1c43bb71dcc11b", features = [
+  "bootstrap",
+] }
 itertools = { version = "0.14.0", optional = true }
 num-format = { version = "0.4.4", optional = true }
 num-traits = { version = "0.2.19", optional = true }
 web-time = "1.1.0"
 
 [dependencies.iced]
-git = "https://github.com/iced-rs/iced.git"
-rev = "89f480bdae951a31944302777b759661ec3c3e83"
+git = "https://github.com/vizkam/iced.git"
+branch = "master"
 version = "0.14.0-dev"
 default-features = false
 features = ["advanced"]
@@ -78,13 +80,13 @@ features = ["advanced"]
 opt-level = 2
 
 [dev-dependencies]
-num-traits = "0.2.19"   # For widget_id_return example
-rand = "0.9.0"            # For wrap example
-getrandom = { version = "0.3.1", features = ["wasm_js"]}
+num-traits = "0.2.19"                                     # For widget_id_return example
+rand = "0.9.0"                                            # For wrap example
+getrandom = { version = "0.3.1", features = ["wasm_js"] }
 
 [dev-dependencies.iced]
-git = "https://github.com/iced-rs/iced.git"
-rev = "89f480bdae951a31944302777b759661ec3c3e83"
+git = "https://github.com/vizkam/iced.git"
+branch = "master"
 version = "0.14.0-dev"
 #default-features = false
 features = ["advanced", "wgpu"]
@@ -165,6 +167,6 @@ required-features = ["wrap", "number_input"]
 crate-type = ["cdylib", "rlib"]
 
 [patch.crates-io]
-iced = {git = "https://github.com/iced-rs/iced.git", rev = "89f480bdae951a31944302777b759661ec3c3e83"}
-iced_core = {git = "https://github.com/iced-rs/iced.git", rev = "89f480bdae951a31944302777b759661ec3c3e83"}
-iced_widget= {git = "https://github.com/iced-rs/iced.git", rev = "89f480bdae951a31944302777b759661ec3c3e83"}
+iced = { git = "https://github.com/vizkam/iced.git", branch = "master" }
+iced_core = { git = "https://github.com/vizkam/iced.git", branch = "master" }
+iced_widget = { git = "https://github.com/vizkam/iced.git", branch = "master" }
