--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,7 +61,7 @@ default = [
 [dependencies]
 cfg-if = "1.0"
 chrono = { version = "0.4.39", optional = true, features = ["wasmbind"] }
-iced_fonts = { git = "https://github.com/vizkam/iced_fonts.git", rev = "969e957632040e443c9fa6789a1c43bb71dcc11b", features = [
+iced_fonts = { git = "https://github.com/vizkam/iced_fonts.git", branch = "master", features = [
   "bootstrap",
 ] }
 itertools = { version = "0.14.0", optional = true }
