--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,8 @@
 name = "iced_aw"
 version = "0.12.2"
 authors = [
-    "Kaiden42 <gitlab@tinysn.com>",
-    "Andrew Wheeler <genusistimelord@gmail.com>",
+  "Kaiden42 <gitlab@tinysn.com>",
+  "Andrew Wheeler <genusistimelord@gmail.com>",
 ]
 edition = "2021"
 description = "Additional widgets for the Iced GUI library"
@@ -21,7 +21,7 @@ card = []
 date_picker = ["chrono"]
 color_picker = ["iced/canvas"]
 grid = ["itertools"]
-glow = []                                                   # TODO
+glow = []                                                  # TODO
 tab_bar = []
 tabs = ["tab_bar"]
 time_picker = ["chrono", "iced/canvas"]
@@ -38,37 +38,38 @@ drop_down = []
 sidebar = []
 
 default = [
-    "badge",
-    "card",
-    "number_input",
-    "date_picker",
-    "color_picker",
-    "grid",
-    "tab_bar",
-    "tabs",
-    "time_picker",
-    "slide_bar",
-    "wrap",
-    "selection_list",
-    "quad",
-    "context_menu",
-    "spinner",
-    "drop_down",
-    "menu",
-    "sidebar",
+  "badge",
+  "card",
+  "number_input",
+  "date_picker",
+  "color_picker",
+  "grid",
+  "tab_bar",
+  "tabs",
+  "time_picker",
+  "slide_bar",
+  "wrap",
+  "selection_list",
+  "quad",
+  "context_menu",
+  "spinner",
+  "drop_down",
+  "menu",
+  "sidebar",
 ]
 
 [dependencies]
 cfg-if = "1.0"
 chrono = { version = "0.4.39", optional = true, features = ["wasmbind"] }
-iced_fonts = "0.1.1"
+iced_fonts = { git = "https://github.com/vizkam/iced_fonts.git", branch = "13.1-patch" }
 itertools = { version = "0.14.0", optional = true }
 num-format = { version = "0.4.4", optional = true }
 num-traits = { version = "0.2.19", optional = true }
 web-time = "1.1.0"
 
 [dependencies.iced]
-#git = "https://github.com/iced-rs/iced.git"
+git = "https://github.com/vizkam/iced.git"
+branch = "13.1-patch"
 #rev = "b474a2b7a763dcde6a377cb409001a7b5285ee8d"
 version = "0.13.1"
 default-features = false
@@ -78,14 +79,15 @@ features = ["advanced"]
 opt-level = 2
 
 [dev-dependencies]
-num-traits = "0.2.19"   # For widget_id_return example
-rand = "0.9.0"            # For wrap example
-getrandom = { version = "0.3.1", features = ["wasm_js"]}
+num-traits = "0.2.19"                                     # For widget_id_return example
+rand = "0.9.0"                                            # For wrap example
+getrandom = { version = "0.3.1", features = ["wasm_js"] }
 
 [dev-dependencies.iced]
-#git = "https://github.com/iced-rs/iced.git"
+git = "https://github.com/vizkam/iced.git"
+branch = "13.1-patch"
 #rev = "b474a2b7a763dcde6a377cb409001a7b5285ee8d"
-version = "0.13.0"
+version = "0.13.1"
 #default-features = false
 features = ["advanced", "wgpu"]
 
@@ -163,3 +165,9 @@ required-features = ["wrap", "number_input"]
 
 [lib]
 crate-type = ["cdylib", "rlib"]
+
+
+[patch.crates-io]
+iced = { git = "https://github.com/vizkam/iced.git", branch = "13.1-patch" }
+iced_core = { git = "https://github.com/vizkam/iced.git", branch = "13.1-patch" }
+iced_widget = { git = "https://github.com/vizkam/iced.git", branch = "13.1-patch" }
